Modif photo et index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Juan Nebra</h1>
+        <h1>Juan BOYER</h1>
 
         <p><a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité Mathieu Nebra" /></a></p>
 
