Modifications fichier index.html via VS

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Mathieu Nebra</title>
+        <title>JuanBOYER-CV</title>
     </head>
 
     <body>
-        <h1>Juan BOYER</h1>
+        <h1>Juanito BOYER - modif° via VSC</h1>
 
         <p><a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité Mathieu Nebra" /></a></p>
 
