Modif index.html: ajout des listes à puces...

--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     </head>
 
     <body>
-        <h1>Juanito BOYER - modif° via VSC</h1>
+        <h1>Juanito BOYER</h1>
 
         <p><a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité Mathieu Nebra" /></a></p>
 
-        <h2>Mon expérience</h2>
+        <h2>SIMPLON:  mes motivations</h2>
 
         <ul>
-            <li><strong>De 1999 à 2007</strong> : fondateur du Site du Zéro, site de cours en ligne pour débutants. Animation le soir et le week-end en parallèle de mes études.</li>
-            <li><strong>De 2007 à 2013</strong> : création de Simple IT, start-up éditrice du Site du Zéro. Lancement d'une collection de livres. Evolution du site jusqu'à 2 millions de visiteurs par mois, avec 20 employés.</li>
-            <li><strong>De 2014 à aujourd'hui</strong> : transformation de Simple IT et du Site du Zéro en une marque unique et globale, OpenClassrooms. Internationalisation, lancement de cours vidéo, d'une collection d'eBooks à la demande et de certificats en ligne.</li>
+            <li>L'opportunité de raliser un rêve: devenir développeur.</li>
+            <li>L'opportunité de réaliser ce rêve,  tout en restant salarié de mon entreprise.</li>
+            <li></li>
         </ul>
 
-        <h2>Mes compétences</h2>
+        <h2>Mes profiles en ligne</h2>
 
         <ul>
-            <li>HTML5 et CSS3</li>
-            <li>PHP (<a href="http://certifications.openclassrooms.com/OC-133423525">certificat OpenClassrooms</a>)</li>
-            <li>SQL</li>
-            <li>Super Smash Bros (niveau expert)</li>
+            <li><a href=https://www.facebook.com/juan.boyer.9/>Facebook</a></li>
+            <li><a href="https://openclassrooms.com/fr/members/kkf68mcx3l04">OPENCLASSROOMS</a></li>
+            <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1>Hackrrank</a></li>
+            <li><a href=https://github.com/juanito974>GITHUB</a></li>
+            <li><a href=https://www.phonandroid.com/forum/members/juan974.2194198/>PhoneAndroid</a></li>
+            
         </ul>
 
         <h2>Ma formation</h2>
