Modif index.html (ajout contenu),  et creation fichiers script.js et style.css,  et création de règles CSS.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>JuanBOYER-CV</title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css">
+    <title>JuanBOYER-CV</title>
+</head>
+
+<body>
+    <div class="mainContent">
         <h1>Juanito BOYER</h1>
 
-        <p><a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité Mathieu Nebra" /></a></p>
+        <div class="profile">
+            <a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité Mathieu Nebra" /></a>
+            <ul>
+                <li>Date de naissance</li>
+                <li>....</li>
+                <li>....</li>
 
-        <h2>SIMPLON:  mes motivations</h2>
+            </ul>
+        </div>
 
-        <ul>
-            <li>L'opportunité de raliser un rêve: devenir développeur.</li>
-            <li>L'opportunité de réaliser ce rêve,  tout en restant salarié de mon entreprise.</li>
-            <li></li>
-        </ul>
+        <div class="section">
+            <h2>SIMPLON: mes motivations</h2>
 
-        <h2>Mes profiles en ligne</h2>
+            <ul>
+                <li>L'opportunité de raliser un rêve: devenir développeur.</li>
+                <li>Devenir développeur tout en restant salarié de mon entreprise.</li>
+                <li>La pédagogie SIMPLON: l'apprentissage en situation de travail (...)</li>
+                <li>avail (...)</li>
+            </ul>
+        </div>
 
-        <ul>
-            <li><a href=https://www.facebook.com/juan.boyer.9/>Facebook</a></li>
-            <li><a href="https://openclassrooms.com/fr/members/kkf68mcx3l04">OPENCLASSROOMS</a></li>
-            <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1>Hackrrank</a></li>
-            <li><a href=https://github.com/juanito974>GITHUB</a></li>
-            <li><a href=https://www.phonandroid.com/forum/members/juan974.2194198/>PhoneAndroid</a></li>
-            
-        </ul>
+        <div class="section">
+            <h2>Mes profiles en ligne</h2>
 
-        <h2>Ma formation</h2>
+            <ul>
+                <li><a href=https://www.facebook.com/juan.boyer.9 />Facebook</a></li>
+                <li><a href="https://openclassrooms.com/fr/members/kkf68mcx3l04">OPENCLASSROOMS</a></li>
+                <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1>Hackrrank</a></li>
+                <li><a href=https://github.com/juanito974>GITHUB</a></li>
+                <li><a href=https://www.phonandroid.com/forum/members/juan974.2194198 />PhoneAndroid</a></li>
 
-        <p>Alors là c'est simple... j'ai tout appris sur OpenClassrooms !</p>
+            </ul>
+        </div>
 
-    </body>
+        <div class="section" id="Hobies">
+            <h2>Hobies</h2>
+
+            <p>Alors là c'est simple... j'ai tout appris sur OpenClassrooms !</p>
+        </div>
+    </div>
+</body>
+
 </html>
+<script src="script.js"></script>
