--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" href="media/favicon.png" />
     <title>JuanBOYER-CV</title>
 </head>
 
@@ -14,7 +14,8 @@
 
         <div class="profile">
 
-            <a href="juan-svg.png"><img src="photo_mini.jpg" alt="Photo Juan BOYER" width="200" height="200" /></a>
+            <a href="media/juan-svg.png"><img src="media/photo_mini.jpg" alt="Photo Juan BOYER" width=200px
+                    height=200px /></a>
             <!-- tentative SGV photo:  <svg width="200" height="100"></svg> <img src="hoto_mini.svg" alt="Un Juan en SVG"></svg>    -->
             <!-- FYI: width="128" height="146"  class="opacity"> -->
 
@@ -32,8 +33,8 @@
         <br />
         <div class="sectionMotivations">
 
-            <a href="">
-                <img src="media/Simplon.logo.png" alt="Simplon Logo" />
+            <a href="https://youtu.be/0PeqnLq12V8" target="blank">
+                <img src="media/Simplon.logo.png" alt="Simplon Logo" width="100" height="100" />
             </a>
             <div>
                 <p>SIMPLON, pour...</p>
@@ -64,17 +65,24 @@
             </ul>
         </div>
         <br />
-        <div class id="Hobbies">
+        <div class id="hobbies">
             <h1>Hobbies</h1>
 
             <!--   <img name="photo" src="C:\Users\psdh772\Documents\_SimplonDev\carte-de-visite\aikido.gif" width=200
                 onmouseover='Intervertir ("photo","C:\Users\psdh772\Documents\_SimplonDev\carte-de-visite\aikido.gif")'>
          -->
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="aikido.gif" alt="Aïkido"
-                width="60" height="60">
+            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/aikido.gif" alt="Aïkido"
+                width="120" height="100">
 
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="guitare.gif" alt="Aïkido"
-                width="60" height="60">
+            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/guitare.gif"
+                alt="Musique" width="120" height="100">
+
+            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/rando-volcan.gif"
+                alt="Rando" width="120" height="100">
+
+            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/computing.gif"
+                alt="Rando" width="120" height="100">
+
         </div>
     </div>
 </body>
