--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,38 +10,54 @@
 
 <body>
     <div class="mainContent">
-        <h1>Juanito BOYER</h1>
+        <!--  ***  A tester:   https://fr.w3docs.com/tools/code-editor/7515
+        https://fr.w3docs.com/snippets/css/comment-creer-un-effet-danimation-de-texte-brillant.html
+    Ou encore:   https://graphiste.com/blog/30-animations-de-texte-pour-surprendre-vos-visiteurs
+-->
+        <div class="monNom">
+            <h1>&emsp;Juanito BOYER</h1> <!-- "lecture" du texte à droite quand Moseover sur photo ...-->
+            <!-- mettre le logo SImplon à la place des "o" de mon nom -->
+        </div>
+        <br />
 
         <div class="profile">
 
-            <a href="media/juan-svg.png"><img src="media/photo_mini.jpg" alt="Photo Juan BOYER" width=200px
-                    height=200px /></a>
-            <!-- tentative SGV photo:  <svg width="200" height="100"></svg> <img src="hoto_mini.svg" alt="Un Juan en SVG"></svg>    -->
-            <!-- FYI: width="128" height="146"  class="opacity"> -->
+            <img src="media/photo_mini.jpg" height="150" width="150" alt="Photo Juan BOYER" />
 
             <span class="ul-profile">
                 <ul>
                     <li>1 {</li>
-                    <li>2 ...name: "Juanito BOYER",</li>
-                    <li>3 ...job: "Conseiller Support Réseau / Tél.",</li>
-                    <li>4 ...age: 48</li>
+                    <li>2 &emsp;name: "Juanito BOYER",</li>
+                    <li>3 &emsp;job: "Conseiller Support Réseau / Tél.",</li>
+                    <li>4 &emsp;age: 48</li>
                     <li>5 } </li>
 
                 </ul>
             </span>
         </div>
         <br />
+
         <div class="sectionMotivations">
 
             <a href="https://youtu.be/0PeqnLq12V8" target="blank">
-                <img src="media/Simplon.logo.png" alt="Simplon Logo" width="100" height="100" />
+                <img src="media/Simplon.logo.png" alt="Simplon Logo" /> <!-- width="100" height="100" />  -->
             </a>
             <div>
+                <!--li :  *** A tester sur cette section dans le CSS - pour chger de la 1ère liste à puces
+                    Voir:  https://www.alsacreations.com/article/lire/1210-donnez-du-style-a-vos-listes.html
+
+    list-style-type: none; /* on annule la puce par défaut */
+    background-image: url(image.png); /* on affiche l'image souhaitée */
+    background-repeat: no-repeat; /* on annule la répétition par défaut */
+    background-position: left center; /* on positionne où l'on veut */
+    padding-left: 20px; /* pour éviter la superposition du contenu */
+}-->
                 <p>SIMPLON, pour...</p>
                 <ul>
-                    <li>Rejoindre la branche numérique de La Poste.</li>
                     <li>Sa pédagogie basée sur la mise en situation.</li>
-                    <li>Son diplôme de concepteur développeur.</li>
+                    <li>Diplôme reconnu par l'État - RNCP de niveau 5.</li>
+                    <li>Son combat pour la fracture numérique...</li>
+                    <li>Rejoindre la branche numérique de La Poste.</li>
 
                 </ul>
             </div>
@@ -52,40 +68,27 @@
         <div class="sectionOnline">
 
             <ul>
-
-                <li><a href=https://www.facebook.com/juan.boyer.9 target="_blank">Facebook__</a></li>
-                <li><a href="https://openclassrooms.com/fr/members/kkf68mcx3l04" target="_blank">OPENCLASSROOMS__</a>
-                </li>
-                <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1 target="_blank">Hackerrank__</a></li>
-                <li><a href=https://github.com/juanito974 target="_blank">GITHUB__</a></li>
-                <li><a href=https://www.phonandroid.com/forum/members/juan974.2194198 target="_blank">PhoneAndroid</a>
-                </li>
-
+                <li><a href="media/OPC-profile.png" target="_blank">OPENCLASSROOMS__</a></li>
+                <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1 target="_blank">HACKERRANK__</a></li>
+                <li><a href=https://github.com/juanito974 target="_blank">GITHUB</a></li>
 
             </ul>
         </div>
         <br />
         <div class id="hobbies">
-            <h1>Hobbies</h1>
 
-            <!--   <img name="photo" src="C:\Users\psdh772\Documents\_SimplonDev\carte-de-visite\aikido.gif" width=200
-                onmouseover='Intervertir ("photo","C:\Users\psdh772\Documents\_SimplonDev\carte-de-visite\aikido.gif")'>
-         -->
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/aikido.gif" alt="Aïkido"
-                width="120" height="100">
+            <h1>&emsp;Hobbies&emsp;</h1>
 
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/guitare.gif"
-                alt="Musique" width="120" height="100">
+            <img border="0" src="media/aikido.gif" alt="Aïkido" width="120" height="100">
 
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/rando-volcan.gif"
-                alt="Rando" width="120" height="100">
+            <img border="0" src="media/guitare.gif" alt="Musique" width="120" height="100">
 
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="media/computing.gif"
-                alt="Rando" width="120" height="100">
+            <img border="0" src="media/rando-volcan.gif" alt="Rando" width="120" height="100">
+
+            <img border="0" src="media/computing.gif" alt="Rando" width="120" height="100">
 
         </div>
     </div>
 </body>
 
 </html>
-<script src="script.js"></script>
