Modif CSS:  des balises liens:  text-decoration:none;

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     Ou encore:   https://graphiste.com/blog/30-animations-de-texte-pour-surprendre-vos-visiteurs
 -->
         <div class="monNom">
-            <h1>&emsp;Juanito BOYER</h1> <!-- "lecture" du texte à droite quand Moseover sur photo ...-->
+            <h1>&emsp;Juanito BOYER</h1> 
+            <!-- Idees: "lecture" du texte à droite quand Moseover sur photo ...-->
             <!-- mettre le logo SImplon à la place des "o" de mon nom -->
         </div>
         <br />
 
         <div class="profile">
+            <!--  idees:   CV en ligne  (cahier des charge:  ...ils veulent cprendre notre parcours)-->
 
             <img src="media/photo_mini.jpg" height="150" width="150" alt="Photo Juan BOYER" />
 
