Mises à jour HTML & CSS (H1 ombrage, texte clignotant, lien email, travail sur margin & padding)

--- a/index.html
+++ b/index.html
@@ -13,81 +13,79 @@
         <!--  ***  A tester:   https://fr.w3docs.com/tools/code-editor/7515
         https://fr.w3docs.com/snippets/css/comment-creer-un-effet-danimation-de-texte-brillant.html
     Ou encore:   https://graphiste.com/blog/30-animations-de-texte-pour-surprendre-vos-visiteurs
--->
+        -->
+
         <div class="monNom">
-            <h1>&emsp;Juanito BOYER</h1> 
-            <!-- Idees: "lecture" du texte à droite quand Moseover sur photo ...-->
-            <!-- mettre le logo SImplon à la place des "o" de mon nom -->
+            <h1>Juanito BOYER</h1>
+
         </div>
-        <br />
+
 
         <div class="profile">
-            <!--  idees:   CV en ligne  (cahier des charge:  ...ils veulent cprendre notre parcours)-->
+            <div class="contentLeft">
+                <img src="media/photo_mini.jpg" alt="Photo Juan BOYER" height=180px width=200px />
+            </div>
 
-            <img src="media/photo_mini.jpg" height="150" width="150" alt="Photo Juan BOYER" />
+            <div class="contentRight">
+                <span class="ul-profile">
+                    <ul>
+                        <li>1 {</li>
+                        <li>2&emsp;job:&emsp;<strong>&emsp;"Concepteur Développeur Web"</strong>,</li>
+                        <li>3&emsp;email: <a href="mailto:juan.boyer@free.fr">juan.boyer@free.fr&emsp;<img
+                                    src="media/mail.gif" alt="Gif Email" width=50px height=22px></a></li>
+                        <li>4&emsp;mobile:&emsp;06.64.51.16.54</li>
+                        <li>5 } </li>
 
-            <span class="ul-profile">
-                <ul>
-                    <li>1 {</li>
-                    <li>2 &emsp;name: "Juanito BOYER",</li>
-                    <li>3 &emsp;job: "Conseiller Support Réseau / Tél.",</li>
-                    <li>4 &emsp;age: 48</li>
-                    <li>5 } </li>
-
-                </ul>
-            </span>
-        </div>
-        <br />
-
-        <div class="sectionMotivations">
-
-            <a href="https://youtu.be/0PeqnLq12V8" target="blank">
-                <img src="media/Simplon.logo.png" alt="Simplon Logo" /> <!-- width="100" height="100" />  -->
-            </a>
-            <div>
-                <!--li :  *** A tester sur cette section dans le CSS - pour chger de la 1ère liste à puces
-                    Voir:  https://www.alsacreations.com/article/lire/1210-donnez-du-style-a-vos-listes.html
-
-    list-style-type: none; /* on annule la puce par défaut */
-    background-image: url(image.png); /* on affiche l'image souhaitée */
-    background-repeat: no-repeat; /* on annule la répétition par défaut */
-    background-position: left center; /* on positionne où l'on veut */
-    padding-left: 20px; /* pour éviter la superposition du contenu */
-}-->
-                <p>SIMPLON, pour...</p>
-                <ul>
-                    <li>Sa pédagogie basée sur la mise en situation.</li>
-                    <li>Diplôme reconnu par l'État - RNCP de niveau 5.</li>
-                    <li>Son combat pour la fracture numérique...</li>
-                    <li>Rejoindre la branche numérique de La Poste.</li>
-
-                </ul>
+                    </ul>
+                </span>
             </div>
         </div>
-        <br />
 
+        <div class="sectionMotivations">
+            <div class="contentLeft">
+                <a href="https://youtu.be/0PeqnLq12V8" target="blank">
+                    <img src="media/Simplon.logo.png" alt="Simplon Logo" height=180px width=200px />
+                    <!-- width="100" height="100" />  -->
+                </a>
+            </div>
+            <div class="contentRight">
+                <div>
+
+                    <p>SIMPLON, pour...</p>
+
+                    <ul>
+                        <li>Sa pédagogie basée sur la mise en situation.</li>
+                        <li>Son diplôme reconnu par l'État.</li>
+                        <li>Sa formation rapide et efficace.</li>
+                        <li>Rejoindre la branche numérique de La Poste.</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <div class="sectionOnline">
 
+            <P>PROFILS EN LIGNE</P>
             <ul>
-                <li><a href="media/OPC-profile.png" target="_blank">OPENCLASSROOMS__</a></li>
-                <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1 target="_blank">HACKERRANK__</a></li>
+                <li><a href="media/OPC-profile.png" target="_blank">OPENCLASSROOMS</a></li>
+                <li><a href=https://www.hackerrank.com/juan_boyer?hr_r=1 target="_blank">HACKERRANK</a></li>
                 <li><a href=https://github.com/juanito974 target="_blank">GITHUB</a></li>
+                <li><a href="media/CV-JuanBOYER-Avril-2021.pdf" target="_blank">MON CV</a></li>
 
             </ul>
         </div>
-        <br />
+
         <div class id="hobbies">
 
-            <h1>&emsp;Hobbies&emsp;</h1>
+            <h1>LOISIRS&emsp;&emsp;</h1>
+            <img src="media/computing.gif" alt="Rando" width="120" height="80">
 
-            <img border="0" src="media/aikido.gif" alt="Aïkido" width="120" height="100">
+            <img src="media/aikido.gif" alt="Aïkido" width="120" height="80">
 
-            <img border="0" src="media/guitare.gif" alt="Musique" width="120" height="100">
+            <img src="media/guitare.gif" alt="Musique" width="120" height="80">
 
-            <img border="0" src="media/rando-volcan.gif" alt="Rando" width="120" height="100">
-
-            <img border="0" src="media/computing.gif" alt="Rando" width="120" height="100">
+            <img src="media/rando-volcan.gif" alt="Rando" width="120" height="80">
 
         </div>
     </div>
