Mise à jours HTML & CSS: photos CV à jour, profile OCR à jour, modif de margin & padding et de propriétés flex...

--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
 
 <body>
     <div class="mainContent">
-        <!--  ***  A tester:   https://fr.w3docs.com/tools/code-editor/7515
-        https://fr.w3docs.com/snippets/css/comment-creer-un-effet-danimation-de-texte-brillant.html
-    Ou encore:   https://graphiste.com/blog/30-animations-de-texte-pour-surprendre-vos-visiteurs
-        -->
 
         <div class="monNom">
             <h1>Juanito BOYER</h1>
 
         </div>
-
 
         <div class="profile">
             <div class="contentLeft">
@@ -30,7 +25,7 @@
                 <span class="ul-profile">
                     <ul>
                         <li>1 {</li>
-                        <li>2&emsp;job:&emsp;<strong>&emsp;"Concepteur Développeur Web"</strong>,</li>
+                        <li>2&emsp;job:&emsp;<strong>&emsp;"Concepteur Développeur Web"</strong>;</li>
                         <li>3&emsp;email: <a href="mailto:juan.boyer@free.fr">juan.boyer@free.fr&emsp;<img
                                     src="media/mail.gif" alt="Gif Email" width=50px height=22px></a></li>
                         <li>4&emsp;mobile:&emsp;06.64.51.16.54</li>
@@ -45,7 +40,6 @@
             <div class="contentLeft">
                 <a href="https://youtu.be/0PeqnLq12V8" target="blank">
                     <img src="media/Simplon.logo.png" alt="Simplon Logo" height=180px width=200px />
-                    <!-- width="100" height="100" />  -->
                 </a>
             </div>
             <div class="contentRight">
@@ -78,14 +72,14 @@
 
         <div class id="hobbies">
 
-            <h1>LOISIRS&emsp;&emsp;</h1>
-            <img src="media/computing.gif" alt="Rando" width="120" height="80">
+            <h1>LOISIRS</h1>
+            <img src="media/computing.gif" alt="Rando" width=120px height=80px>
 
-            <img src="media/aikido.gif" alt="Aïkido" width="120" height="80">
+            <img src="media/aikido.gif" alt="Aïkido" width=120px height=80px>
 
-            <img src="media/guitare.gif" alt="Musique" width="120" height="80">
+            <img src="media/guitare.gif" alt="Musique" width=120px height=80px>
 
-            <img src="media/rando-volcan.gif" alt="Rando" width="120" height="80">
+            <img src="media/rando-volcan.gif" alt="Rando" width=120px height=80px>
 
         </div>
     </div>
