Derniers réglages CSS

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <div class="sectionMotivations">
             <div class="contentLeft">
                 <a href="https://youtu.be/0PeqnLq12V8" target="blank">
-                    <img src="media/Simplon.logo.png" alt="Simplon Logo" height=180px width=200px />
-                </a>
+                    <img src="media/Simplon.logo.png" alt="Simplon Logo" height=180px width=200px /></a>
+
+
             </div>
             <div class="contentRight">
                 <div>
